--- a/src/_includes/blocks/speakers/speakers.css
+++ b/src/_includes/blocks/speakers/speakers.css
@@ -10,6 +10,7 @@
   text-align: center;
   max-width: 30rem;
   justify-self: center;
+  margin-bottom: 4rem;
 }
 
 .block-speakers-list {
